[package]
name = "hashicorp_vault"
version = "0.7.0"
authors = [
  "Chris MacNaughton <chmacnaughton@gmail.com>",
  "Christopher Brickley <brickley@gmail.com>"
]
description = "HashiCorp Vault API client for Rust"
license = "MIT"
repository = "https://github.com/chrismacnaughton/vault-rs"

[dependencies]
chrono = "~0.4"
hyper = "~0.11"
serde = "1.0.16"
serde_derive = "1.0.16"
serde_json = "1.0.4"
reqwest = "~0.8"
log = "0.3.8"
quick-error = "1.2.1"
url = "1.5.1"

[dependencies.clippy]
optional = true
version = "^0.0"

[features]
default = ["vault_0_6_2"]
"vault_0_6_1" = []
"vault_0_6_2" = ["vault_0_6_1"]
