[package]
name = "hashicorp_vault"
version = "0.7.0"
edition = "2018"
authors = [
  "Chris MacNaughton <chmacnaughton@gmail.com>",
  "Christopher Brickley <brickley@gmail.com>"
]
description = "HashiCorp Vault API client for Rust"
license = "MIT"
repository = "https://github.com/chrismacnaughton/vault-rs"

[dependencies]
base64 = "~0.11"
chrono = "~0.4"
hyper = "~0.13"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.48"
reqwest = { version = "~0.10", features = ["blocking"] }
log = "0.4.8"
quick-error = "1.2.3"
url = "2.1.1"

[dependencies.clippy]
optional = true
version = "^0.0"

[features]
default = ["vault_0_6_2"]
"vault_0_6_1" = []
"vault_0_6_2" = ["vault_0_6_1"]