[package]
name = "hashicorp_vault"
version = "2.1.0"
edition = "2018"
authors = [
  "Chris MacNaughton <chmacnaughton@gmail.com>",
  "Christopher Brickley <brickley@gmail.com>"
]
description = "HashiCorp Vault API client for Rust"
license = "MIT"
repository = "https://github.com/chrismacnaughton/vault-rs"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
base64 = "~0.13"
chrono = "~0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "~0.11", default-features = false, features = ["blocking"] }
log = "^0.4"
quick-error = "~2.0"
url = "^2.3"

[dependencies.clippy]
optional = true
version = "^0.0"
